# qt-playlist

./: .gitignore  CMakeLists.txt  README.md  appdatabase.db  main.cpp  requirements.sh
include/: Database.hpp  DatabaseManager.hpp  SpotifyClient.hpp  TokenManager.hpp  config.h  rest.hpp  spotify.hpp  utils.hpp  widget.h
src/: Database.cpp  DatabaseManager.cpp  SpotifyClient.cpp  TokenManager.cpp  spotify.cpp  utils.cpp  widget.cpp  widget.ui
